--- a/CarWechat/app/templates/agent/carback.html
+++ b/CarWechat/app/templates/agent/carback.html
@@ -89,6 +89,27 @@
                 <div class="weui-wepay-detail__bd">是否出省：</div>
                 <div class="weui-wepay-detail__ft">{% if data.outprovince==1 %}是{% else %}否{% endif %}</div>
             </div>
+            <div class="weui-cells weui-cells_form" id="uploader">
+                <div class="weui-cell">
+                    <div class="weui-cell__bd">
+                        <div class="weui-uploader">
+                            <div class="weui-uploader__hd">
+                                <p class="weui-uploader__title">存证图片</p>
+                            </div>
+                            <div class="weui-uploader__bd">
+                                <ul class="weui-uploader__files" id="uploaderFiles">
+                                    {% for img in imgs %}
+                                        {% if img %}
+                                            <li data-id="c{{ loop.index }}" class="weui-uploader__file"
+                                                style="background-image:url({{ img }})"></li>
+                                        {% endif %}
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         {% for o in continueOrders %}
             <div class="weui-wepay-details__hd">
