--- a/CarWechat/app/templates/agent/accidentDetail.html
+++ b/CarWechat/app/templates/agent/accidentDetail.html
@@ -87,23 +87,41 @@
             </div>
         </div>
 
-        {#        <div class="weui-uploader">#}
-        {#            <div class="weui-uploader__hd">#}
-        {#                <p class="weui-uploader__title">存证上传</p>#}
-        {#            </div>#}
-        {#            <div class="weui-uploader__bd">#}
-        {#                <ul class="weui-uploader__files" id="uploaderFiles">#}
-        {#                    <li class="weui-uploader__file"></li>#}
-        {#                    <li class="weui-uploader__file"></li>#}
-        {#                    <li class="weui-uploader__file"></li>#}
-        {#                </ul>#}
-        {#                <div class="weui-uploader__input-box">#}
-        {#                    <input id="uploaderInput" class="weui-uploader__input" type="file" accept="image/*" multiple/>#}
-        {#                </div>#}
-        {#            </div>#}
-        {#        </div>#}
+        <div class="weui-cells weui-cells_form" id="uploader">
+            <div class="weui-cell">
+                <div class="weui-cell__bd">
+                    <div class="weui-uploader">
+                        <div class="weui-uploader__hd">
+                            <p class="weui-uploader__title">图片上传</p>
+                            <div class="weui-uploader__info"><span id="uploadCount">0</span>/6</div>
+                        </div>
+                        <div class="weui-uploader__bd">
+                            <ul class="weui-uploader__files" id="uploaderFiles">
+                                {% for img in imgs %}
+                                    {% if img %}
+                                        <li data-id="c{{ loop.index }}" class="weui-uploader__file"
+                                            style="background-image:url({{ img }})"></li>
+                                    {% endif %}
+                                {% endfor %}
+                            </ul>
+                            <div class="weui-uploader__input-box">
+                                <input id="uploaderInput" class="weui-uploader__input" type="file" accept="image/*"
+                                       capture="camera" multiple=""/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-
+        <div class="weui-gallery">
+            <span class="weui-gallery__img" style="background-image: url(./images/pic_article.png);"></span>
+            <div class="weui-gallery__opr">
+                <a href="javascript:" class="weui-gallery__del">
+                    <i class="weui-icon-delete weui-icon_gallery-delete"></i>
+                </a>
+            </div>
+        </div>
     </div>
 
 
@@ -117,16 +135,49 @@
 {% endblock %}
 {% block script %}
     <script>
+
+        var imgs = [
+            {% for im in imgs %}
+                {% if im %}
+                    "{{ im }}",
+                {% endif %}
+            {% endfor %}
+        ];
+        var uploadCount = imgs.length;
+        $("#uploadCount").text(uploadCount);
+        var imgList = {};
+        for(var im=1;im<=imgs.length;im++){
+            imgList[im+""]=imgs[im-1]
+        }
+        function imgClickBind() {
+            $(".weui-uploader__file").click(function () {
+                var bg = $(this).css('background-image');
+                bg = bg.replace('url(', '').replace(')', '').replace(/\"/gi, "");
+                var val = $(this).attr("data-id");
+                var that = this;
+                var gallery = weui.gallery(bg, {
+                    className: 'custom-classname',
+                    onDelete: function () {
+                        if (confirm('确定删除该图片？')) {
+                            delete imgList[val];
+                            $(that).remove();
+                            --uploadCount;
+                            $("#uploadCount").text(uploadCount);
+                        }
+                        gallery.hide(function () {
+                            console.log('`gallery` has been hidden');
+                        });
+                    }
+                });
+            });
+        }
+
         weui.uploader('#uploader', {
-            url: 'http://localhost:8081',
-            auto: false,
+            url: '{{ url_for("agentapi.upload") }}',
+            auto: true,
             type: 'file',
             fileVal: 'fileVal',
-            compress: {
-                width: 1600,
-                height: 1600,
-                quality: 1
-            },
+            compress: false,
             onBeforeQueued: function (files) {
                 // `this` 是轮询到的文件, `files` 是所有文件
 
@@ -138,16 +189,17 @@
                     weui.alert('请上传不超过10M的图片');
                     return false;
                 }
-                if (files.length > 3) { // 防止一下子选择过多文件
-                    weui.alert('最多只能上传3张图片，请重新选择');
+                if (files.length > 6) { // 防止一下子选择过多文件
+                    weui.alert('最多只能上传6张图片，请重新选择');
                     return false;
                 }
-                if (uploadCount + 1 > 3) {
-                    weui.alert('最多只能上传3张图片');
+                if (uploadCount + 1 > 6) {
+                    weui.alert('最多只能上传6张图片');
                     return false;
                 }
 
                 ++uploadCount;
+                $("#uploadCount").text(uploadCount);
 
                 // return true; // 阻止默认行为，不插入预览图的框架
             },
@@ -174,11 +226,24 @@
                 // return true; // 阻止默认行为，不使用默认的进度显示
             },
             onSuccess: function (ret) {
-                console.log(this, ret);
+                imgList[uploadCount] = ret["localUrl"];
+                imgClickBind();
+                {#                var gallery = weui.gallery(ret["localUrl"], {#}
+                {#                    className: 'custom-classname',#}
+                {#                    onDelete: function () {#}
+                {#                        if (confirm('确定删除该图片？')) {#}
+                {#                            console.log('删除');#}
+                {#                        }#}
+                {#                        gallery.hide(function () {#}
+                {#                            console.log('`gallery` has been hidden');#}
+                {#                        });#}
+                {#                    }#}
+                {#                });#}
                 // return true; // 阻止默认行为，不使用默认的成功态
             },
             onError: function (err) {
                 console.log(this, err);
+                imgClickBind()
                 // return true; // 阻止默认行为，不使用默认的失败态
             }
         });
@@ -256,6 +321,7 @@
                 formData.append('theirprice', $('#theirprice').val());
                 formData.append('repaircompany', $('#repaircompany').val());
                 formData.append('created_at', $('#created_at').val());
+                formData.append('imgList', JSON.stringify(imgList));
                 $.ajax({
 
                     url: window.location.protocol + "//" + window.location.host + '/wx/api/agent/accident?id={{ data.id }}',
