--- a/CarWechat/app/templates/agent/accidentDetail.html
+++ b/CarWechat/app/templates/agent/accidentDetail.html
@@ -106,7 +106,7 @@
                             </ul>
                             <div class="weui-uploader__input-box">
                                 <input id="uploaderInput" class="weui-uploader__input" type="file" accept="image/*"
-                                       capture="camera" multiple=""/>
+                                       multiple=""/>
                             </div>
                         </div>
                     </div>
