--- a/CarWechat/app/templates/agent/depart.html
+++ b/CarWechat/app/templates/agent/depart.html
@@ -230,7 +230,7 @@
                             </ul>
                             <div class="weui-uploader__input-box">
                                 <input id="uploaderInput" class="weui-uploader__input" type="file" accept="image/*"
-                                       capture="camera" multiple=""/>
+                                        multiple=""/>
                             </div>
                         </div>
                     </div>
