--- a/CarWechat/app/templates/agent/carback.html
+++ b/CarWechat/app/templates/agent/carback.html
@@ -8,6 +8,50 @@
 {% endblock %}
 {% block content %}
     <div class="weui-wepay-details">
+        {% for o in continueOrders %}
+            <div class="weui-wepay-details__hd">
+                <div class="weui-wepay-details__state">
+                    <h2 class="weui-wepay-details__title">
+                        续租订单</h2>
+                    <p class="weui-wepay-details__desc">￥{{ o.totalfee/100 }}</p>
+                </div>
+            </div>
+            <div class="weui-wepay-details__bd">
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">单号：</div>
+                    <div class="weui-wepay-detail__ft">{{ o.tradeno |cutstring }}</div>
+                </div>
+
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">服务点：</div>
+                    <div class="weui-wepay-detail__ft">{{ o.Serverstop.name }}</div>
+                </div>
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">时间：</div>
+                    <div class="weui-wepay-detail__ft">{{ o.created_at }}</div>
+                </div>
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">支付状态：</div>
+                    <div class="weui-wepay-detail__ft">{{ orderConfig[o.status][0] }}</div>
+                </div>
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">天数：</div>
+                    <div class="weui-wepay-detail__ft">{{ o.count }}</div>
+                </div>
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">折扣：</div>
+                    <div class="weui-wepay-detail__ft">-￥{{ o.cutfee/100 }}</div>
+                </div>
+
+                <div class="weui-wepay-detail">
+                    <div class="weui-wepay-detail__bd">总价：</div>
+                    <div class="weui-wepay-detail__ft weui-wepay-color-green">￥{{ o.totalfee/100 }}</div>
+                </div>
+
+            </div>
+
+        {% endfor %}
+
         <div class="weui-wepay-details__hd">
             <div class="weui-wepay-details__state">
                 <h2 class="weui-wepay-details__title">
@@ -111,75 +155,41 @@
                 </div>
             </div>
         </div>
-        {% for o in continueOrders %}
-            <div class="weui-wepay-details__hd">
-                <div class="weui-wepay-details__state">
-                    <h2 class="weui-wepay-details__title">
-                        续租订单</h2>
-                    <p class="weui-wepay-details__desc">￥{{ o.totalfee/100 }}</p>
-                </div>
+
+
+        <div class="weui-wepay-details__hd cohead">
+            <div class="weui-wepay-details__state">
+                <h2 class="weui-wepay-details__title">
+
+                    <i class="weui-wepay-details__icon weui-icon-success"></i>
+                    总计
+
+                </h2>
             </div>
-            <div class="weui-wepay-details__bd">
-                <div class="weui-wepay-detail">
-                    <div class="weui-wepay-detail__bd">单号：</div>
-                    <div class="weui-wepay-detail__ft">{{ o.tradeno |cutstring }}</div>
-                </div>
-
-                <div class="weui-wepay-detail">
-                    <div class="weui-wepay-detail__bd">服务点：</div>
-                    <div class="weui-wepay-detail__ft">{{ o.Serverstop.name }}</div>
-                </div>
-                <div class="weui-wepay-detail">
-                    <div class="weui-wepay-detail__bd">时间：</div>
-                    <div class="weui-wepay-detail__ft">{{ o.created_at }}</div>
-                </div>
-                <div class="weui-wepay-detail">
-                    <div class="weui-wepay-detail__bd">支付状态：</div>
-                    <div class="weui-wepay-detail__ft">{{ orderConfig[o.status][0] }}</div>
-                </div>
-                <div class="weui-wepay-detail">
-                    <div class="weui-wepay-detail__bd">天数：</div>
-                    <div class="weui-wepay-detail__ft">{{ o.count }}</div>
-                </div>
-                <div class="weui-wepay-detail">
-                    <div class="weui-wepay-detail__bd">折扣：</div>
-                    <div class="weui-wepay-detail__ft">-￥{{ o.cutfee/100 }}</div>
-                </div>
-
-                <div class="weui-wepay-detail">
-                    <div class="weui-wepay-detail__bd">总价：</div>
-                    <div class="weui-wepay-detail__ft weui-wepay-color-green">￥{{ o.totalfee/100 }}</div>
-                </div>
-
+        </div>
+        <div class="weui-wepay-details__bd">
+            <div class="weui-wepay-detail">
+                <div class="weui-wepay-detail__bd">起始日期</div>
+                <div class="weui-wepay-detail__ft">{{ data.created_at }}</div>
             </div>
-
-        {% endfor %}
-        {% if  continueOrders %}
-            <div class="weui-wepay-details__hd cohead">
-                <div class="weui-wepay-details__state">
-                    <h2 class="weui-wepay-details__title">
-
-                        <i class="weui-wepay-details__icon weui-icon-success"></i>
-                        总计
-
-                    </h2>
-                </div>
+            <div class="weui-wepay-detail">
+                <div class="weui-wepay-detail__bd">截止日期</div>
+                <div class="weui-wepay-detail__ft">{{ OrderSumData.endDate }}</div>
             </div>
-            <div class="weui-wepay-details__bd">
-                <div class="weui-wepay-detail">
-                    <div class="weui-wepay-detail__bd">起始日期</div>
-                    <div class="weui-wepay-detail__ft">{{ data.created_at }}</div>
-                </div>
-                <div class="weui-wepay-detail">
-                    <div class="weui-wepay-detail__bd">总价</div>
-                    <div class="weui-wepay-detail__ft">{{ OrderSumData.priceSum/100 }}</div>
-                </div>
-                <div class="weui-wepay-detail">
-                    <div class="weui-wepay-detail__bd">订单总天数</div>
-                    <div class="weui-wepay-detail__ft">{{ OrderSumData.countSum }}</div>
-                </div>
+            <div class="weui-wepay-detail">
+                <div class="weui-wepay-detail__bd">超时/分钟</div>
+                <div class="weui-wepay-detail__ft">{{ OrderSumData.overDate }}分钟</div>
             </div>
-        {% endif %}
+            <div class="weui-wepay-detail">
+                <div class="weui-wepay-detail__bd">总价</div>
+                <div class="weui-wepay-detail__ft">{{ OrderSumData.priceSum/100 }}</div>
+            </div>
+            <div class="weui-wepay-detail">
+                <div class="weui-wepay-detail__bd">订单总天数</div>
+                <div class="weui-wepay-detail__ft">{{ OrderSumData.countSum }}</div>
+            </div>
+        </div>
+
         {#        {% if data.status=="ok" %}#}
         {#            <div class="weui-wepay-details__ft">#}
         {#                <a href="javascript:;" class="weui-btn weui-btn_primary" id="refund">申请退款</a>#}
