--- a/CarWechat/app/templates/agent/orderDetail.html
+++ b/CarWechat/app/templates/agent/orderDetail.html
@@ -213,8 +213,12 @@
                 <div class="weui-wepay-detail__ft">{{ data.created_at }}</div>
             </div>
             <div class="weui-wepay-detail">
-                <div class="weui-wepay-detail__bd">起始日期</div>
+                <div class="weui-wepay-detail__bd">发车日期</div>
                 <div class="weui-wepay-detail__ft">{{ data.fromdate }}</div>
+            </div>
+            <div class="weui-wepay-detail">
+                <div class="weui-wepay-detail__bd">还车日期</div>
+                <div class="weui-wepay-detail__ft">{{ data.todate }}</div>
             </div>
             <div class="weui-wepay-detail">
                 <div class="weui-wepay-detail__bd">截止日期</div>
