--- a/CarWechat/app/templates/agent/carback.html
+++ b/CarWechat/app/templates/agent/carback.html
@@ -178,7 +178,7 @@
             </div>
             <div class="weui-wepay-detail">
                 <div class="weui-wepay-detail__bd">超时/分钟</div>
-                <div class="weui-wepay-detail__ft">{{ OrderSumData.overDate }}分钟</div>
+                <div class="weui-wepay-detail__ft">{{ OrderSumData.isOver }}{{ OrderSumData.overDate }}</div>
             </div>
             <div class="weui-wepay-detail">
                 <div class="weui-wepay-detail__bd">总价</div>
