--- a/CarWechat/app/templates/agent/orderDetail.html
+++ b/CarWechat/app/templates/agent/orderDetail.html
@@ -226,7 +226,7 @@
             </div>
             <div class="weui-wepay-detail">
                 <div class="weui-wepay-detail__bd">超时/分钟</div>
-                <div class="weui-wepay-detail__ft">{{ OrderSumData.overDate }}</div>
+                <div class="weui-wepay-detail__ft">{{ OrderSumData.isOver }}{{ OrderSumData.overDate }}</div>
             </div>
             <div class="weui-wepay-detail">
                 <div class="weui-wepay-detail__bd">总价</div>
