--- a/CarAdmin/app/templates/admin/lib.html
+++ b/CarAdmin/app/templates/admin/lib.html
@@ -235,7 +235,7 @@
         <script src="{{ admin_static.url(filename='vendor/leaflet/leaflet.js', v='0.7.3') }}"></script>
         <script src="{{ admin_static.url(filename='vendor/leaflet/leaflet.draw.js', v='0.2.3') }}"></script>
     {% endif %}
-    <script src="{{ admin_static.url(filename='vendor/bootstrap-daterangepicker/daterangepicker.js', v='1.3.22') }}"></script>
+    <script src="{{ url_for('static',filename='js/daterangepicker.js') }}"></script>
     {% if editable_columns %}
         <script src="{{ admin_static.url(filename='vendor/x-editable/js/bootstrap3-editable.min.js', v='1.5.1.1') }}"></script>
     {% endif %}
